--- a/bookshelf-client/src/styles.css
+++ b/bookshelf-client/src/styles.css
@@ -7,7 +7,7 @@
 }
 
 .admin-item {
-  @apply rounded-md p-2 mb-2 block;
+  @apply rounded-md p-2 mb-2 block font-semibold text-gray-800;
 }
 .admin-item:hover,
 .admin-item.active {
