feat: fix some styles for books page

--- a/bookshelf-client/src/styles.css
+++ b/bookshelf-client/src/styles.css
@@ -15,6 +15,15 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
+.btn {
+  @apply px-4 py-2 bg-teal-700 border rounded-md shadow-xl transition duration-500 text-white text-xs uppercase font-semibold;
+}
+.btn:hover {
+  @apply bg-teal-900;
+}
+.btn-disabled {
+  @apply px-4 py-2 bg-gray-500 border rounded-md shadow-xl transition duration-500 text-white text-xs uppercase font-semibold;
+}
 .admin-item:hover,
 .admin-item.active {
   @apply bg-gray-300;
