--- a/bookshelf-client/src/styles.css
+++ b/bookshelf-client/src/styles.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .nav-item {
-  @apply pl-4 text-gray-200 font-medium;
+  @apply pl-4 text-gray-100 font-bold;
 }
 
 .admin-item {
@@ -16,13 +16,13 @@
   overflow: hidden;
 }
 .btn {
-  @apply px-4 py-2 bg-teal-700 border rounded-md shadow-xl transition duration-500 text-white text-xs uppercase font-semibold;
+  @apply px-4 py-2 bg-teal-700 border rounded-md shadow-xl transition duration-500 text-white text-xs uppercase font-bold;
 }
 .btn:hover {
   @apply bg-teal-900;
 }
 .btn-disabled {
-  @apply px-4 py-2 bg-gray-500 border rounded-md shadow-xl transition duration-500 text-white text-xs uppercase font-semibold;
+  @apply px-4 py-2 bg-gray-500 border rounded-md shadow-xl transition duration-500 text-white text-xs uppercase font-bold;
 }
 .admin-item:hover,
 .admin-item.active {
